--- a/index.css
+++ b/index.css
@@ -7,7 +7,7 @@
     width: 500px;
     height: 700px;
     margin: 0 auto;
-    background: url('./img/Bg.jpg');
+    background: url('./img/BG.jpg');
     background-size: 100% auto;
     background-position: center;
     position: relative;
